--- a/Practexam/PractExam.Rmd
+++ b/Practexam/PractExam.Rmd
@@ -29,6 +29,7 @@ integer when necessary.
 typeof(warpbreaks$breaks)
 typeof(warpbreaks$wool)
 typeof(warpbreaks$tension)
+#new
 
 #the data type of breaks, wool, and tension is double, integer, and integer.
 ```
